--- a/Report Project1/DeletionOfApproval.rdl
+++ b/Report Project1/DeletionOfApproval.rdl
@@ -22,17 +22,20 @@
           </QueryParameter>
         </QueryParameters>
         <CommandText>select  ps.Deregistered as [Deletion of approval] , p.AspNumber AS[Asp no],
-   names.Name as [Product Name], ps.Land as[Country], df.Name as [Pharmacetical form] , p.Strength,ma.Name as [MA Holder]
+          names.Name as [Product Name], ps.Land as[Country], df.Name as [Pharmacetical form] ,
+         p.Strength,ma.Name as [MA Holder], TA.Name as [TherapeuticArea]
+ 
   from PREG4.dbo.Products p
    join [PREG4].[dbo].ProductSpecifications ps
-  on  p.Id= ps.ProductId
+    on  p.Id= ps.ProductId
   join PREG4.dbo.ProductNames names
     on p.ProductNameId= names.Id
-
-   left join  PREG4.dbo.DosageForms df
-     on p.DosageFormId= df.Id
-	 left join  PREG4.dbo.MarketAuthHolders Ma
+  left join  PREG4.dbo.DosageForms df
+    on p.DosageFormId= df.Id
+  left join  PREG4.dbo.MarketAuthHolders Ma
 	 on ps.MarketAuthHolderId= ma.Id
+  left join PREG4.dbo.TherapeuticAreas TA
+    on names.TherapeuticAreaId= TA.id 
 
    where  ( ps.Deregistered &gt;= @FromDate OR @FromDate  IS NULL)
   and  ( ps.Deregistered &lt;= @ToDate  OR @ToDate IS NULL )
@@ -67,6 +70,10 @@
           <DataField>MA Holder</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
+        <Field Name="TherapeuticArea">
+          <DataField>TherapeuticArea</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
       </Fields>
     </DataSet>
   </DataSets>
@@ -84,10 +91,10 @@
                   <Width>1.39063in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.14062in</Width>
+                  <Width>2.32812in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1in</Width>
+                  <Width>1.36458in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>2.51563in</Width>
@@ -151,7 +158,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>Asp no</Value>
+                                  <Value>ASP/DSP</Value>
                                   <Style>
                                     <FontFamily />
                                     <FontSize>11pt</FontSize>
@@ -667,20 +674,20 @@
        Parameters!OrderBy.Value ="ProductName",			Fields!Product_Name.Value,
 	    parameters!OrderBy.Value= "DeletionOfApproval", Fields!Deletion_of_approval.Value,
 		parameters!OrderBy.Value="MaHolder",			Fields!MA_Holder.Value,
-		parameters!OrderBy.Value="TherapeuticArea",		Fields!Pharmacetical_form.Value )</Value>
+		parameters!OrderBy.Value="TherapeuticArea",		Fields!TherapeuticArea.Value )</Value>
               </SortExpression>
             </SortExpressions>
             <Top>0.09667in</Top>
             <Left>0.49953cm</Left>
             <Height>0.43in</Height>
-            <Width>13.54167in</Width>
+            <Width>14.09376in</Width>
             <Style />
           </Tablix>
         </ReportItems>
         <Height>0.71417in</Height>
         <Style />
       </Body>
-      <Width>13.73833in</Width>
+      <Width>14.29043in</Width>
       <Page>
         <PageHeader>
           <Height>2.06375cm</Height>
