--- a/Report Project1/PsurListReport.rdl
+++ b/Report Project1/PsurListReport.rdl
@@ -142,10 +142,10 @@
                   <Width>2.80729in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.14062in</Width>
+                  <Width>1.67187in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>3.26563in</Width>
+                  <Width>3.40105in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>1.46875in</Width>
@@ -154,18 +154,18 @@
                   <Width>1.51042in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.33334in</Width>
+                  <Width>2.32292in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.54167in</Width>
+                  <Width>2.16667in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.51042in</Width>
+                  <Width>1.61459in</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
                 <TablixRow>
-                  <Height>0.25125in</Height>
+                  <Height>0.22in</Height>
                   <TablixCells>
                     <TablixCell>
                       <CellContents>
@@ -413,7 +413,9 @@
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox4</rd:DefaultName>
@@ -451,7 +453,9 @@
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox8</rd:DefaultName>
@@ -489,7 +493,9 @@
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox14</rd:DefaultName>
@@ -512,7 +518,7 @@
                   </TablixCells>
                 </TablixRow>
                 <TablixRow>
-                  <Height>0.24125in</Height>
+                  <Height>0.21in</Height>
                   <TablixCells>
                     <TablixCell>
                       <CellContents>
@@ -818,7 +824,9 @@
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Responsible</rd:DefaultName>
@@ -885,16 +893,16 @@
               </Filter>
             </Filters>
             <Top>0.09667in</Top>
-            <Left>0.49954cm</Left>
-            <Height>0.4925in</Height>
-            <Width>19.36459in</Width>
+            <Left>0.49953cm</Left>
+            <Height>0.43in</Height>
+            <Width>18.75001in</Width>
             <Style />
           </Tablix>
         </ReportItems>
         <Height>0.71417in</Height>
         <Style />
       </Body>
-      <Width>19.56126in</Width>
+      <Width>19.28001in</Width>
       <Page>
         <PageHeader>
           <Height>2.06375cm</Height>
